force-app/main/default/objects/Get_Trip_Date_Settings__c/Get_Trip_Date_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Date Settings :- Example yyyy-mm-dd  2018-07-31 and Last N days If Current month is Aug and you want july data then you can have last 30 days for deactivation date.
if Current month is Aug and you want to Get June reimbersment then you need to put 60</description>
    <label>Get Trip Date Settings</label>
</CustomObject>