force-app/main/default/objects/Get_Trip_Date_Settings__c/fields/Last_N_Days__c.field-meta.xml
<CustomField>
    <fullName>Last_N_Days__c</fullName>
    <label>Last N Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>